# hockey_gemini

./: Pipfile  README.md  pyproject.toml
app/sclav_crewai_sample/: main.py
src/sclav_crewai_sample/: crew.py
